--- a/Code/Client/Windows/OfficeCheevosClient/OfficeCheevosClient/MainWindow.xaml
+++ b/Code/Client/Windows/OfficeCheevosClient/OfficeCheevosClient/MainWindow.xaml
@@ -3,6 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button Content="Button" Height="23" HorizontalAlignment="Left" Margin="201,130,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
     </Grid>
 </Window>
