--- a/Code/Client/Windows/OfficeCheevosClient/OfficeCheevosClient/App.xaml
+++ b/Code/Client/Windows/OfficeCheevosClient/OfficeCheevosClient/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="OfficeCheevosClient.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             ShutdownMode="OnExplicitShutdown"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
