--- a/Code/Client/Windows/OfficeCheevosClient/OfficeCheevosClient/MainWindow.xaml
+++ b/Code/Client/Windows/OfficeCheevosClient/OfficeCheevosClient/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="OfficeCheevosClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="1" Width="1" WindowStyle="None" Opacity="0">
     <Grid>
         <Button Content="Button" Height="23" HorizontalAlignment="Left" Margin="201,130,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
     </Grid>
